# halo2-aes

./: Cargo.toml  README.md
benches/: aes128.rs  key_schedule.rs
src/: aes.rs  aes128.rs  aes128_old.rs  constant.rs  key_schedule.rs  lib.rs  main.rs  s_box.rs  s_box_table.rs  table.rs  u8_range_check.rs  u8_xor_table.rs  utils.rs
src/chips/: gf_mul_chip.rs  mod.rs  sbox_chip.rs  u8_range_check_chip.rs  u8_xor_chip.rs
src/table/: gf_mul.rs  mod.rs  s_box.rs  u8_range_check.rs  u8_xor.rs
