[package]
name = "halo2-aes"
version = "0.1.0"
edition = "2021"

[features]
default = ["halo2-pse"]
dev-graph = ["halo2_proofs/dev-graph", "plotters"]
cost-estimator = ["halo2_proofs/cost-estimator"]
halo2-pse = ["halo2_proofs"]
hyperplonk = ["halo2_proofs_hyperplonk"]

[dependencies]
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v0.3.0", features = [
  "derive_serde",
  "dev-graph",
  "cost-estimator",
], optional = true }
halo2_proofs_hyperplonk = { git = "https://github.com/han0110/halo2.git", branch = "feature/for-benchmark", package = "halo2_proofs", optional = true }

aes = "0.8.4"
plotters = { version = "0.3.5", optional = true }
rand = "0.8.5"

[dev-dependencies]
serde_json = "1.0.117"
criterion = "0.5.1"
rand = "0.8.5"
ark-std = { version = "0.4.0", features = ["print-trace"] }


[[bench]]
name = "key_schedule"
harness = false
required-features = ["halo2-pse"]

[[bench]]
name = "aes128"
harness = false
required-features = ["halo2-pse"]


[profile.dev]
opt-level = 3
debug = 2              # change to 0 or 2 for more or less debug info
overflow-checks = true
incremental = true

# Local "release" mode, more optimized than dev but faster to compile than release
[profile.local]
inherits = "dev"
opt-level = 3
# Set this to 1 or 2 to get more useful backtraces
debug = 1
debug-assertions = true
panic = 'unwind'
# better recompile times
incremental = true
lto = "thin"
codegen-units = 16

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
lto = "fat"
# `codegen-units = 1` can lead to WORSE performance - always bench to find best profile for your machine!
codegen-units = 1
panic = "abort"
incremental = false
